apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
