apps/n8n/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
spec:
  parentRefs:
    - name: eg
      sectionName: https
      namespace: gateway
  hostnames:
    - harbor.homie.e10n.me
  rules:
    - backendRefs:
        - name: n8n
          namespace: n8n
          port: 80
